# terrarium-api

./: .gitignore  .travis.yml  README.md  Vagrantfile  docker-compose.yml  terrarium-api.cabal
app/: Main.hs
deployment/: production.yml  vagrant.yml
deployment/roles/common/tasks/: main.yml
deployment/roles/compiles/tasks/: main.yml
deployment/roles/deployment/tasks/: main.yml
deployment/roles/docker-build/tasks/: main.yml
deployment/roles/docker-setup/tasks/: main.yml
deployment/roles/haskell-related/tasks/: main.yml
documentation/: database_schema
nginx/sites-enabled/: terrarium
terrarium/: Dockerfile  terrarium-api.cabal
terrarium/app/: Main.hs
terrarium/app/PlantCheckList/: Main.hs
terrarium/migrations/: 0001_initial.sql  0002_polygons.sql
terrarium/src/: JsonModel.hs  Model.hs
terrarium/src/Geolocate/: JSON.hs  Search.hs
terrarium/src/HTTP/: Base.hs
terrarium/src/Plant/: Model.hs
terrarium/src/Plant/ETL/: ITIS.hs
terrarium/test/: Spec.hs  TestModel.hs
