name:                terrarium-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/terrarium-api#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JsonModel
                     , Lib
                     , Model
                     , Geolocate.JSON
                     , Geolocate.Search
                     , HTTP.Base
                     , Plant.ETL.ITIS
                     , Plant.Model
  build-depends:       base >= 4.7 && < 5
                     , aeson == 0.11.2.0
                     , bytestring  == 0.10.6.0
                     , conduit == 1.2.6.6
                     , containers == 0.5.6.2
                     , happstack-server ==7.4.6.2
                     , HTTP == 4000.3.3
                     , network-uri == 2.6.1.0
                     , sqlite-simple == 0.4.9.0
                     , text == 1.2.2.1
                     , transformers == 0.4.2.0
  default-language:    Haskell2010

executable terrarium-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , terrarium-api
                     , aeson == 0.11.2.0
                     , bytestring  == 0.10.6.0
                     , happstack-server ==7.4.6.2
                     , transformers == 0.4.2.0
  default-language:    Haskell2010

executable plant-checklist-etl
  hs-source-dirs:      app/PlantCheckList
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , terrarium-api

test-suite terrarium-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , terrarium-api
                     , QuickCheck >= 2.8.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/terrarium-api
